--- a/package.json
+++ b/package.json
@@ -3,35 +3,57 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router": "^5.1.17",
-    "@types/react-router-dom": "^5.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-helmet": "6.1.0",
+    "react-router": "5.2.1",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "1.1.2"
+  },
+  "devDependencies": {
+    "@chimericdream/eslint-config": "6.1.0",
+    "@chimericdream/eslint-config-import": "1.0.2",
+    "@chimericdream/eslint-config-jest": "4.0.1",
+    "@chimericdream/eslint-config-jsx-a11y": "4.0.1",
+    "@chimericdream/eslint-config-react": "4.1.0",
+    "@chimericdream/eslint-config-react-hooks": "2.0.1",
+    "@chimericdream/eslint-config-typescript": "5.1.0",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "27.0.2",
+    "@types/node": "16.11.6",
+    "@types/react-dom": "17.0.10",
+    "@types/react-router": "5.1.17",
+    "@types/react-router-dom": "5.3.2",
+    "@types/react": "17.0.33",
+    "commitizen": "4.2.4",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "7.32.0",
+    "husky": "7.0.4",
+    "jest": "27.3.1",
+    "npm-run-all": "4.1.5",
+    "pinst": "2.1.6",
+    "sass": "1.43.4",
+    "standard-version": "9.3.2",
+    "typescript": "4.4.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
