--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@chimericdream/eslint-config-react": "4.1.0",
     "@chimericdream/eslint-config-react-hooks": "2.0.1",
     "@chimericdream/eslint-config-typescript": "5.1.0",
+    "@commitlint/config-conventional": "13.2.0",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
@@ -53,7 +54,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "husky install",
+    "postpublish": "pinst --enable",
+    "prepublishOnly": "pinst --disable && npm run build",
+    "release": "cross-env HUSKY=0 standard-version",
+    "release:alpha": "cross-env HUSKY=0 standard-version --prerelease alpha",
+    "release:beta": "cross-env HUSKY=0 standard-version --prerelease beta",
+    "release:rc": "cross-env HUSKY=0 standard-version --prerelease rc",
+    "type-check": "tsc"
   },
   "browserslist": {
     "production": [
