--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "pinst": "2.1.6",
     "sass": "1.43.4",
     "standard-version": "9.3.2",
-    "typescript": "4.4.4"
+    "typescript": "^4.4.4"
   },
   "config": {
     "commitizen": {
