--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-helmet": "^6.1.4",
     "commitlint": "^14.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-helmet": "6.1.0",
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
@@ -21,6 +19,7 @@
     "@chimericdream/eslint-config-react": "4.1.0",
     "@chimericdream/eslint-config-react-hooks": "2.0.1",
     "@chimericdream/eslint-config-typescript": "5.1.0",
+    "@chimericdream/stylelint": "3.0.3",
     "@commitlint/config-conventional": "13.2.0",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.1.2",
@@ -37,8 +36,8 @@
     "husky": "7.0.4",
     "npm-run-all": "4.1.5",
     "pinst": "2.1.6",
-    "sass": "1.43.4",
     "standard-version": "9.3.2",
+    "stylelint": "^11.0.0",
     "typescript": "^4.4.4"
   },
   "config": {
@@ -56,6 +55,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "stylelint src/*.{css,scss,sass}",
     "postinstall": "husky install",
     "postpublish": "pinst --enable",
     "prepublishOnly": "pinst --disable && npm run build",
